fixed spacing issue, incorrect hover color, added style variables for theming

--- a/sass/px-deck-selector-predix.scss
+++ b/sass/px-deck-selector-predix.scss
@@ -25,13 +25,13 @@ common/abstract rules go in px-deck-selector-sketch.scss, not in this file.
 @import 'px-deck-selector-sketch.scss';
 
 .dropdown-menu {
-  border-color: $gray5;
-  background-color: $gray1;
+  border-color: var(--px-deck-selector-border-color, $gray5);
+  background-color: var(--px-deck-selector-background-color, $gray1);
   li div {
-    color: $gray9;
+    color: var(--px-deck-selector-text-color, $gray9);
     &:hover {
-      color: $white;
-      background-color: $primary-blue;
+      color: var(--px-deck-selector-hover-text-color, $white);
+      background-color: var(--px-deck-selector-hover-background-color, $select-blue-hover);
     }
   }
   li.deck-editor{
